# tauri-tray-app

./: .editorconfig  .env.example  .eslintrc  .gitignore  .ncurc.json  .npmrc  .prettierignore  .prettierrc  Cargo.toml  LICENSE-MIT  README.md  biome.json  degit.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  updates.json  vite.config.ts
.github/: FUNDING.yml  SECURITY.md
.github/setup-sdk/: action.yml
.github/workflows/: ci-actions.yml  ci-test.yml  cleanup.yml  release.yml.example
.husky/: pre-commit
plugins/window-theme/: Cargo.toml
plugins/window-theme/src/: lib.rs
plugins/window-theme/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/: App.tsx  app.spec.tsx  app.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: builder.rs  command.rs  config.rs  deeplink.rs  fetcher.rs  lib.rs  main.rs  menu.rs  meta.rs  scripts.rs  tray.rs  utils.rs
src-tauri/src/cmd/: general.rs  mod.rs  quotes.rs
src-tauri/src/command/: general.rs  greet.rs  mod.rs  request.rs
src-tauri/src/core/: cmd.rs  menu.rs  mod.rs  state.rs  tray.rs  utils.rs
src-tauri/src/core/theme/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/menu/: app_menu.rs  handler.rs  items.rs  macos.rs  mod.rs  tray_icons.rs  tray_menu.rs
src-tauri/src/tray/: handler.rs  icons.rs  items.rs  mod.rs
src-tauri/src/utils/: mod.rs  updater.rs  webview.rs
src/assets/styles/: main.css
src/components/: common.tsx  link.tsx  loader.tsx  theme-switcher.tsx
src/components/titlebar/: CaptionControl.tsx  TitleBar.tsx  TrafficLight.tsx  titlebar.css
src/components/ui-controls/: controls.tsx  icons.tsx  index.tsx
src/components/ui-elements/button/: Button.tsx
src/hooks/: useDeviceInfo.ts  useForm.ts  useHotKeys.ts
src/libraries/: updater.ts  utils.ts
src/screens/: default.tsx  not-found.tsx  settings.tsx  welcome.tsx
src/screens/settings/: _layout.tsx  about.tsx  general.tsx  updates.tsx
src/stores/: engine.ts  ui-store.ts
src/types/: api-response.ts  quote.ts  quotes.ts
src/utils/: helpers.ts  settings.ts
