[workspace]
resolver = "1"
members = [
  # "plugins",
  "src-tauri"
]

[workspace.package]
version = "0.1.0"
rust-version = "1.74"
edition = "2021"

[workspace.dependencies]
tauri-build = { version = "1.5", features = [] }
tauri = { version = "1.5", features = [
  "devtools",
  "dialog-all",
  "fs-all",
  "global-shortcut-all",
  "http-request",
  "icon-ico",
  "icon-png",
  "macos-private-api",
  "notification-all",
  "shell-open",
  "system-tray",
  "updater",
  "window-all",
] }

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true         # Enable Link Time Optimization
opt-level = "z"    # Optimize for size.
codegen-units = 1  # Reduce number of codegen units to increase optimizations.
panic = "abort"    # Abort on panic
strip = true       # Automatically strip symbols from the binary.
debug = false      # Disable debug on production build.
