[package]
name = "tauri-tray-app"
version = { workspace = true }
description = "A Tauri application"
authors = ["you"]
license = "MIT OR Apache-2.0"
repository = "http://github.com/riipandi/tauri-tray-app"
rust-version = { workspace = true }
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true }
dotenv-build = { version = "^0.1.1" }

[dependencies]
tauri = { workspace = true }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "colored",
] }
plugin-window-theme = { path = "../plugins/window-theme" }
anyhow = { version = "^1.0" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "^1.34", features = ["macros", "time"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
machine-uid = { version = "0.5.1" }
simple-home-dir = { version = "^0.2" }
log = { version = "^0.4" }
ts-rs = { version = "^7.0" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.25.0" }
objc = { version = "0.2.7" }

[target.'cfg(target_os = "windows")'.dependencies]
# interprocess = { version = "1.2", default-features = false }
# windows-sys = { version = "0.52.0", features = [
#   "Win32_Foundation",
#   "Win32_UI_Input_KeyboardAndMouse",
#   "Win32_UI_WindowsAndMessaging",
# ] }
# winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=0.18.2", features = [ "v2_22" ] }

# Updater plugin only for desktop apps
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
