[package]
name = "tauri-tray-app"
version = "0.0.0"
description = "A Tauri App with SolidJS, Tailwind, TypeScript, and Vite"
authors = ["you"]
license = "Apache-2.0 or MIT"
repository = "http://github.com/riipandi/tauri-tray-app"
rust-version = "1.75"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.8", features = [] }
dotenv-build = "^0.1.1"

[dependencies]
# https://docs.rs/tauri/2.0.0-beta.11/tauri/#cargo-features
tauri = { version = "2.0.0-beta.11", features = [
  "devtools",
  "image-ico",
  "image-png",
  "macos-private-api",
  "rustls-tls",
  "test",
  "tracing",
  "tray-icon",
  "webview-data-url"
] }
tauri-plugin-dialog = "2.0.0-beta.2"
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-http = "2.0.0-beta.2"
tauri-plugin-log = { version = "2.0.0-beta.2", features = ["colored"] }
tauri-plugin-notification = "2.0.0-beta.2"
tauri-plugin-os = "2.0.0-beta.2"
tauri-plugin-process = "2.0.0-beta.2"
tauri-plugin-shell = "2.0.0-beta.2"
# tauri-plugin-devtools = { git = "https://github.com/crabnebula-dev/devtools" }
anyhow = { version = "1.0.81", features = ["backtrace"] }
log = "^0.4"
native_db = { version = "0.5.3", features = ["chrono", "tokio", "uuid"] }
native_model = "0.4.11"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
typeshare = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = { version = "=2.0.1", features = ["v2_38"] }
tintanum = "0.1"
futures-lite = "2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-beta.2"

# Optimized for bundle size. If you want faster builds comment out/delete this section.
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
lto = "thin"         # Enable Link Time Optimization.
opt-level = "s"      # Optimize for binary size.
codegen-units = 32   # Reduce number of codegen units to increase optimizations.
panic = "unwind"     # Abort on panic.
strip = "debuginfo"  # Automatically strip debuginfo from the binary.
debug = false        # Disable debug on production build.

[profile.dev]
debug = "limited"    # Debug info without type or variable-level information.
