[package]
name = "plugin-window-theme"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
tauri = { workspace = true }
serde = { version = "1", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = { version = "0.25.0" }

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.15"
tintanum = "0.1"
futures-lite = "1.13"
tokio = { version = "1", features = ["macros"] }
once_cell = "1.18"

[target."cfg(target_os = \"windows\")".dependencies]
